[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/PlayerShip.png" type="Texture" id=1]
[ext_resource path="res://Assets/BossLevel/RGBYFire.png" type="Texture" id=2]
[ext_resource path="res://src/Levels/BossLevel/BossPlayer.gd" type="Script" id=3]
[ext_resource path="res://src/Misc/GenericExplosion.tscn" type="PackedScene" id=4]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 280.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="BossPlayer" type="Node2D"]
script = ExtResource( 3 )

[node name="PlayerShip" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 0.159355, -48.9475, 19.5088, 16.6517, 29.8914, 16.6517, 29.8914, 5.7972, 33.4309, 5.7972, 33.6669, 17.3597, 42.8697, 17.1237, 22.1044, 30.3379, 7.00244, 30.3379, 6.05857, 38.8328, -5.97583, 38.5968, -7.39164, 30.102, -23.2015, 28.4502, -41.8431, 17.8316, -32.8763, 17.1237, -32.4043, 6.5051, -28.6288, 6.5051, -28.1569, 17.3597, -18.7181, 17.3597 )

[node name="BulletSpawn" type="Node2D" parent="."]
position = Vector2( -31.3838, 5.66325 )

[node name="BulletSpawn2" type="Node2D" parent="."]
position = Vector2( 31.6198, 5.89922 )

[node name="BulletSpawn3" type="Node2D" parent="."]
position = Vector2( 0.235962, -50.2613 )

[node name="RGBYFire" type="Sprite" parent="."]
position = Vector2( -0.0765762, 52.283 )
texture = ExtResource( 2 )

[node name="FireParticles" type="Particles2D" parent="."]
position = Vector2( 0, 40.6892 )
amount = 32
process_material = SubResource( 1 )

[node name="GenericExplosion" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="animation_finished" from="GenericExplosion" to="." method="_on_GenericExplosion_animation_finished"]
